@@ -279,52 +279,6 @@ dnl ==============================================
 dnl About-me
 dnl ==============================================
 
-AC_CHECK_HEADERS([pty.h stropts.h])
-AC_CHECK_FUNCS(forkpty,, AC_CHECK_LIB(util,forkpty, [AC_DEFINE(HAVE_FORKPTY)] [ABOUTME_LIBS="$ABOUTME_LIBS -lutil"]))
-AC_SUBST(ABOUTME_LIBS)
-
-dnl -----  pseudo terminal handling
-dnl -----  os        pty master      streams modules
-dnl -----  aix       /dev/ptc        - (loads ldterm by default)
-dnl -----  hpux      /dev/ptmx       ldterm ptem
-dnl -----  solaris   /dev/ptmx       ldterm ptem ttcompat
-
-dnl -----  aix loads module ldterm by default and wants no ptem
-dnl -----  ptmx takes precedence
-AC_MSG_CHECKING([for master pty])
-if test -r /dev/ptc ; then
-  if test -r /dev/ptmx ; then
-    AC_DEFINE_UNQUOTED(MASTERPTYDEV, "/dev/ptmx", [hp and sun style pty master])
-    AC_MSG_RESULT(ptmx)
-  else
-    AC_DEFINE_UNQUOTED(MASTERPTYDEV, "/dev/ptc", [aix style pty master])
-    AC_MSG_RESULT(ptc)
-  fi
-elif test -r /dev/ptmx ; then
-  AC_DEFINE_UNQUOTED(MASTERPTYDEV, "/dev/ptmx", [hp and sun style pty master])
-  AC_MSG_RESULT(ptmx)
-else
-  AC_DEFINE_UNQUOTED(MASTERPTYDEV, "/dev/null", [lets see what happens])
-fi
-
-dnl -----  this will succeed on solaris and fail on hpux
-AC_MSG_CHECKING(if your system supports the ttcompat streams module)
-AC_RUN_IFELSE([AC_LANG_SOURCE([[
-#include <stdio.h>
-#include <fcntl.h>
-#include <stropts.h>
-main()
-{ int line;
-
-  if ( (line = open("/dev/ptmx", O_RDWR)) >= 0 &&
-       ioctl(line, I_PUSH, "ttcompat") == 0 )
-    exit(0);
-  exit(1);
-}
-]])],[AC_DEFINE(HAVE_TTCOMPAT, 1,
-             "Define if your system supports the ttcompat streams module")
-   AC_MSG_RESULT(yes)],[AC_MSG_RESULT(no)],[AC_MSG_RESULT(assuming no)])
-
 AC_MSG_CHECKING([whether to enable About Me])
 AC_ARG_ENABLE([aboutme],
    AC_HELP_STRING([--enable-aboutme],
@@ -333,24 +287,12 @@ AC_ARG_ENABLE([aboutme],
 AC_MSG_RESULT([$enable_aboutme])
 
 if test "x$enable_aboutme" = "xyes"; then
-  LIBEBOOK_REQUIREMENT="libebook-1.2 >= 1.7.90"
-
-  AC_MSG_CHECKING(for evolution-data-server)
-  if $PKG_CONFIG --exists libebook-1.2; then
-     LIBEBOOK_REQUIREMENT="libebook-1.2 >= 1.7.90"
-     AC_DEFINE(BUILD_ABOUTME, 1, Build the about-me capplet)
-       
-     PKG_CHECK_MODULES(LIBEBOOK, libebook-1.2)
-  fi
+  PKG_CHECK_MODULES(LIBEBOOK, [libebook-1.2 >= 1.7.90],
+                    [AC_DEFINE([HAVE_LIBEBOOK], 1,
+                    [Define when evolution-data-server libebook-1.2 is available])])
 fi
 
-if test -n "$LIBEBOOK_REQUIREMENT"; then
-  AC_DEFINE([HAVE_LIBEBOOK], 1,
-            [Defined when evolution-data-server libebook-1.2 is detected])
-fi
-
-AM_CONDITIONAL(BUILD_ABOUTME, test -n "$LIBEBOOK_REQUIREMENT")
-AM_CONDITIONAL(HAVE_LIBEBOOK, test -n "$LIBEBOOK_REQUIREMENT")
+AM_CONDITIONAL(BUILD_ABOUTME, test "x$enable_aboutme" = "xyes")
 
 dnl ==============================================
 dnl HAL stuff
