@@ -1,3 +1,10 @@
+2007-04-25  Jens Granseuer  <jensgr@gmx.net>
+
+	* configure.in:
+	* capplets/about-me/Makefile.am:
+	* capplets/about-me/gnome-about-me-password.c:
+	remove obsolete build stuff from the about-me capplet (bug #430219)
+
 2007-04-23  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* configure.in:
